# working-notes

./: .copier-answers.yml  404.html  404.md  building-the-site.md  creating-feeds.md  index.html  index.md  ipython.md  jinja.md  manifest.json  markata.json  markata.toml  pyproject.toml  rss.xml  serverless-databricks-privatelink.md  your-own-style.md
.github/workflows/: build-site.yml
_logs/debug/: index.html
_logs/info/: index.html
_logs/warning/: index.html
_profile/: index.html
all/: index.html
archive/: index.html
building-the-site/: index.html
creating-feeds/: index.html
draft/: index.html
ipython/: index.html
jinja/: index.html
pages/jira/: serverless-databricks-privatelink.md
published/: index.html
serverless-databricks-privatelink/: index.html
your-own-style/: index.html
