[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my_working_notes"

description = "Blog posts about stuff I work on"

readme = "README.md"
requires-python = ">=3.7"
license = "MIT"


authors = [
  { name = "Nicholas Payne", email = "nic.payne@avant.com" },
]


dependencies = [
    "markata~=0.5.0.dev0",
    "setuptools>=68.0.0",
]
dynamic = ["version"]

[tool.hatch.version]
path = "my_working_notes/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pyinstrument",
]

[tool.hatch.envs.default.scripts]
clean = "markata clean"
build = "markata build"
tui = "markata tui"
serve = "python -m http.server 8000 --directory=markout"
clean-build = ['clean', 'build',]
clean-tui = ['clean', 'build', 'tui']
